package models;

public class Color {

}
